docker jvm remote